--- a/src/app/views/landing/indieaf/indieaf.styl
+++ b/src/app/views/landing/indieaf/indieaf.styl
@@ -116,20 +116,31 @@
 			font-weight: bold
 			text-align: right
 
-	/* TODO(buttons) .btn-af
-	   button-variant(, background: $gj-blue, color: $white, icon-color: $white, outline-color: $gj-blue, active-background: rgba($gj-pink, 0.4), active-color: $white, addon-color: $white, outline-addon-color: $white)
+	.button-af
+		rounded-corners()
+		display: inline-block
+		text-transform: uppercase
+		vertical-align: middle
+		cursor: pointer
+		outline: 0
+		white-space: nowrap
+		text-decoration: none !important
+		user-select: none
+		font-weight: bold
+		color: $gj-pink !important
+		border-width: 2px
+		border-style: solid
+		border-color: $gj-blue
+		line-height: 60px
+		padding-left: 20px
+		padding-right: 20px
+		text-shadow: 0 0 8px $gj-pink
+		box-shadow: 0 0 8px $gj-blue
+		font-size: 25px
+		transition: all 1000ms
 
-	   .btn-af-outline
-	   color: $gj-pink !important
-	   border-width: $button-md-outline-border-size
-	   border-style: solid
-	   line-height: 60px
-	   padding-left: $button-md-padding-horizontal - @border-width
-	   padding-right: @padding-left
-	   text-shadow: 0 0 8px $gj-pink
-	   box-shadow: 0 0 8px $gj-blue
-	   font-size: 25px
-	   transition: all 1000ms
-
-	   &:hover
-	   box-shadow: 0 0 8px $gj-pink */
+		&:hover
+			box-shadow: 0 0 8px $gj-pink
+			border-color: $gj-pink
+			background-color: rgba($gj-pink, 0.4)
+			color: $white !important
